--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
 	background: rgba(0,0,0,0.9);
 }
 
+
 /** Logo css **/
 
 .header .logo {
@@ -1688,7 +1689,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#454545', end
 /** Footer css **/
 
 .footer {
-	background: #34363e;
+	background:#eceef6;
 	display: block;
 	padding: 25px 0 0;
 	position: relative;
@@ -1703,7 +1704,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#454545', end
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: -32px;
+	top: 60;
 	height: 32px;
 	text-align: center;
 	margin: auto;
